<resources>
    <string name="app_name">DrawMe</string>

    <!-- Main Fragment -->
    <string name="play_ai">Jouer contre l\'IA</string>
    <string name="play_multiplayer">Jouer avec des amis</string>

    <!-- Multiplayer menu Fragment -->
    <string name="label_server_name">Entrez le nom de la partie :</string>
    <string name="input_server_name">Nom de la partie</string>
    <string name="create_server">Créer une partie</string>
    <string name="join_server">Rejoindre une partie</string>
    <string name="cancel">Revenir au menu principal</string>

    <!-- Auth Fragment -->
    <string name="sign_in">Se connecter</string>
    <string name="sign_out">Se déconnecter</string>
    <string name="hi_username">Bonjour %1$s !</string>
    <string name="account_counter_win">🏆 Nb de parties gagnées : </string>
    <string name="account_counter_played">🎮 Nb de parties jouées : </string>
    <string name="account_ratio">💯 Ratio : </string>

    <!-- Waiting Room Fragment -->
    <string name="exit_game">Quitter la partie</string>
    <string name="img_account">Photo de profil</string>
    <string name="start_game">Lancer la partie</string>
    <string name="game_name">Partie %1$s</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">544347569811260</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb544347569811260</string>
    
    <!-- Game Fragment -->
    <string name="input_guessed_word">Que représente le dessin ?</string>

    <!-- Errors -->
    <string name="internet_error">"Une erreur s'est produite, vérifiez votre connexion internet"</string>

    <!-- Random usernames -->
    <string-array name="random_usernames">
        <item>Chuck Norris</item>
        <item>Pablo Picasso</item>
        <item>Vincent van Gogh</item>
        <item>Léonard de Vinci</item>
        <item>La Joconde</item>
        <item>Michel-Ange</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
